# agx-emulsion-zero

./: .gitmodules  CMakeLists_measure_final.txt  compare_filter_results.py  debug_spectral_shape  debug_spectral_shape.cpp  test_color_filters_final_comparison.py  test_color_filters_final_cpp  test_color_filters_final_cpp.cpp  test_illuminants_cpp  test_measure_final.cpp  test_measure_python.py  test_python_detailed.py  test_python_parity.py
agx_emulsion/utils/__pycache__/: fast_interp.fast_interp-5.py313.1.nbc  fast_interp.fast_interp-5.py313.nbi  fast_interp_lut.apply_lut_cubic_2d-150.py313.1.nbc  fast_interp_lut.apply_lut_cubic_2d-150.py313.2.nbc  fast_interp_lut.apply_lut_cubic_2d-150.py313.3.nbc  fast_interp_lut.apply_lut_cubic_2d-150.py313.nbi  fast_interp_lut.apply_lut_cubic_3d-86.py313.1.nbc  fast_interp_lut.apply_lut_cubic_3d-86.py313.2.nbc  fast_interp_lut.apply_lut_cubic_3d-86.py313.nbi  fast_interp_lut.cubic_interp_lut_at_2d-108.py313.1.nbc  fast_interp_lut.cubic_interp_lut_at_2d-108.py313.2.nbc  fast_interp_lut.cubic_interp_lut_at_2d-108.py313.3.nbc  fast_interp_lut.cubic_interp_lut_at_2d-108.py313.nbi  fast_interp_lut.cubic_interp_lut_at_3d-35.py313.1.nbc  fast_interp_lut.cubic_interp_lut_at_3d-35.py313.2.nbc  fast_interp_lut.cubic_interp_lut_at_3d-35.py313.nbi  fast_interp_lut.mitchell_weight-7.py313.1.nbc  fast_interp_lut.mitchell_weight-7.py313.nbi  fast_interp_lut.safe_index-20.py313.1.nbc  fast_interp_lut.safe_index-20.py313.nbi  fast_stats.fast_lognormal-126.py313.1.nbc  fast_stats.fast_lognormal-126.py313.nbi  fast_stats.fast_lognormal_from_mean_std-165.py313.1.nbc  fast_stats.fast_lognormal_from_mean_std-165.py313.nbi
build_measure_final/: CMakeLists.txt
cpp/: CMakeLists.txt
cpp/build_color_filters_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  test_color_filters_cpp.cpp
cpp/build_color_filters_test/json_build/: Makefile
cpp/build_color_filters_test/numcpp_build/: Makefile  cmake_install.cmake
cpp/build_color_filters_test/numcpp_build/examples/: Makefile  cmake_install.cmake
cpp/build_color_filters_test/pybind11_build/: Makefile
cpp/include/: autoexposure.hpp  balance.hpp  color_filters.hpp  color_filters.hpp.backup  colour.hpp  config.hpp  conversions.hpp  couplers.hpp  crop_resize.hpp  density_curves.hpp  density_spectral.hpp  diffusion.hpp  emulsion.hpp  fast_interp_lut.hpp  fast_stats.hpp  grain.hpp  illuminants.hpp  io.hpp  lut.hpp  measure.hpp  parametric.hpp  process.hpp  profile_io.hpp  reconstruct.hpp  scipy.hpp  spectral_upsampling.hpp
cpp/ofx/: AgXEmulsionPlugin.cpp  ofx_cuda_bridge.cu
cpp/src/: fast_interp_lut.cu
cpp/src/libs/: colour.cpp
cpp/src/model/: balance.cpp  color_filters.cpp  couplers.cpp  couplers.cu  density_curves.cpp  density_curves.cu  diffusion.cpp  diffusion.cu  emulsion.cpp  emulsion.cu  grain.cpp  grain.cu  illuminants.cpp  parametric.cpp  parametric.cu  process.cpp  reconstruct.cpp
cpp/src/utils/: autoexposure.cpp  autoexposure.cu  conversions.cpp  conversions.cu  crop_resize.cpp  crop_resize.cu  density_spectral.cpp  density_spectral_gpu.cu  fast_interp_lut.cu  fast_stats.cpp  fast_stats.cu  io.cpp  lut.cpp  measure.cpp  profile_io.cpp  spectral_upsampling.cpp  spectral_upsampling.cu
cpp/tests/: CMakeLists.txt  pybind_wrapper.cpp  run_comparison_test.py
cpp/tests/autoexposure/: compare_autoexposure_cpp_vs_py.py  compare_autoexposure_py.py  independent_autoexposure_test.cpp
cpp/tests/balance/: debug_balance.cpp  pybind_balance.cpp  test_balance_python_standalone.py
cpp/tests/config/: config_test.py  pybind_config.cpp
cpp/tests/coupler/: README.md  compare_results.py  pybind_couplers.cpp  test_couplers.py  test_couplers_cpp.py  test_couplers_python_standalone.py  test_couplers_standalone  test_couplers_standalone.cpp
cpp/tests/crop_resize/: compare_crop_cpp_vs_py.py  compare_crop_resize_py.py  independent_crop_resize_test.cpp  tmp_crop_cpp.json
cpp/tests/density_curves/: README.md  compare_results.py  test_density_curves_cuda  test_density_curves_cuda.cpp  test_density_curves_python_standalone.py  test_density_curves_standalone  test_density_curves_standalone.cpp
cpp/tests/diffusion/: README.md  compare_results.py  test_diffusion_python_standalone.py  test_diffusion_standalone  test_diffusion_standalone.cpp
cpp/tests/emulsion/: build.sh  compare_emulsion_python.py  comparison_summary_fixed_arrays.md  test_emulsion.py  test_emulsion_fixed_input  test_emulsion_fixed_input.cpp
cpp/tests/fast_interp_lut/: CMakeLists.txt  fast_interp_lut_test.py  pybind_fast_interp_lut.cpp
cpp/tests/fast_stats/: README.md  build.sh  compare_fast_stats.py  comparison_summary.md  test_fast_stats  test_fast_stats.cpp  test_fast_stats_comparison  test_fast_stats_comparison.cpp  test_fast_stats_cuda
cpp/tests/grain/: build.sh  compare_grain_python.py  comparison_summary.md  comparison_summary_fixed_arrays.md  test_grain_fixed_input  test_grain_fixed_input.cpp
cpp/tests/io/: compare_results.py  debug_interpolation.py  io_test.py  pyblind_io.cpp  test_cpp_load_agx.cpp  test_profile_io.cpp  test_python_load_agx.py  tmp_profile_copy.json
cpp/tests/parametric/: compare_parametric_py.py  independent_parametric_test.cpp  tmp_parametric_cpp.json
cpp/tests/process/: compare_process_py.py  compare_process_stages.py  compute_python_raw_center.py  debug_rgb_to_raw_python.py  debug_rgb_to_raw_simple.py  dump_process_stages.cpp  test_process_end_to_end.cpp
cpp/tests/reconstruct/: compare_reconstruct_no_opt.py  independent_reconstruct_test.cpp
cpp/tests/scipy/: pybind_scipy_test.cpp
cpp/tests/spectral_upsampling/: README.md  compare_results.py  compare_rgb_to_raw_py.py  py_debug_rgb_to_raw.py  run_comparison.sh  test_midgray.py  test_rgb_to_raw_hanatos.cpp  test_spectral_upsampling_cuda.cpp  test_spectral_upsampling_python_standalone.py  test_spectral_upsampling_standalone  test_spectral_upsampling_standalone.cpp
